--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ header .right a:hover {
 }
 
 main {
+  display:none;
   max-width: 700px;
   margin: 30px auto; /* Tighter gap below header */
   padding: 0 20px;
@@ -65,6 +66,7 @@ main {
 }
 
 section {
+  display:none;
   max-width: 700px;
   margin: 20px auto; /* Small gap below header */
   padding: 0 20px;
@@ -75,6 +77,7 @@ section {
 
 main.visible,
 section.visible {
+  display: block;
   opacity: 1;
   visibility: visible;
 }
