--- a/style.css
+++ b/style.css
@@ -138,3 +138,12 @@ button:hover {
   display: block;
   margin: 20px auto; /* centered, tidy gap below */
 }
+
+
+
+
+
+canvas{
+  width: 100%;
+  height: 400px;
+}
